# fenlu-erp-v5

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
apps/api_gateway/: Dockerfile  main.py  pyproject.toml  settings.py
apps/api_gateway/routers/: auth.py  health.py  orgs.py  sales.py
apps/web-shell/: Dockerfile  README.md  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web-shell/e2e/: full-flow.spec.ts
apps/web-shell/src/: App.js  App.tsx  index.css  main.js
apps/web-shell/src/components/: DataTable.tsx  FormDialog.tsx  Layout.js  Layout.tsx  ModuleCard.tsx  PageHeader.tsx  (+1 more)
infra/: alembic.ini  init.sql
infra/alembic/: env.py
infra/alembic/versions/: 0001_foundation.py  330f243d1f2b_merge_all_lanes.py  mfg_0001_work_order.py  mfg_0002_job_ticket.py  mfg_0003_qc_inspection.py  mfg_0004_eam.py  mfg_0005_safety.py  mfg_0006_energy.py  mfg_0007_workstation.py  mgmt_0001_gl_journal.py  mgmt_0002_ap_ar.py  mgmt_0003_hr.py  mgmt_0004_attendance.py  mgmt_0005_approval.py  mgmt_0006_casbin_rules.py  mgmt_0007_kpi.py  plm_0002_products.py  plm_0003_bom.py  plm_0004_cad_attachments.py  plm_0005_routing.py  plm_0006_ecn.py  plm_0007_crm.py  plm_0008_quotes_order_lines.py  scm_0001_supplier.py  scm_0002_purchase.py  scm_0003_supplier_product.py  scm_0004_warehouse.py  scm_0005_inventory.py  scm_0006_stocktake.py
infra/casbin/: model.conf
scripts/: deploy.sh  e2e_test.py  factory_bootstrap.py  fill_gaps.py  fill_inventory.py  fill_remaining.py  seed_journals.py  seed_sales.py  simulator.py  test_all_forms.py
tests/: conftest.py  test_foundation.py  test_lane_stubs.py
(+46 files in other folders)
