[project]
name = "fenlu-v5"
version = "0.1.0"
description = "分路链式工业互联网系统 V5.0 - 工信部三级集成级"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "casbin>=1.36.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["packages*", "apps*"]

[tool.uv.workspace]
members = ["apps/api_gateway", "packages/shared", "packages/product_lifecycle", "packages/production", "packages/supply_chain", "packages/management_decision"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages", "apps"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # FastAPI Depends() in defaults is idiomatic
    "N811",   # PgUUID alias is deliberate (disambiguate from stdlib UUID)
    "RUF002", # Chinese docstrings legitimately use × etc.
    "RUF012", # SQLAlchemy __table_args__ tuple is unavoidable
    "UP046",  # Generic[T] subclass works fine with pydantic
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["infra/alembic/versions/"]

[[tool.mypy.overrides]]
module = "casbin.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "packages", "apps"]
